--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,11 @@
   height: 100%;
   margin: 0 20%;
 }
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
 .list-clear {
   list-style-type: none;
 }
@@ -16,7 +21,7 @@
   float: left;
   text-align: center;
   line-height: 40px;
-  padding: 16px;
+  padding: 20px;
 }
 .link-details {
   color: #32495B;
@@ -43,20 +48,93 @@
   background-color: #FFF4EF;
 }
 
-
+/* header top */
 #header-top-left {
   float: left;
 }
 #header-top-right {
   float: right;
 }
-
 #icon-arrowdown {
   margin-left: 20px;
   padding-right: 20px;
   border-right: 1px solid #32495B;
 }
+#icon-search {
+  color: #2AB1C7;
+}
+#icon-world {
+  padding-left: 0;
+}
+#header-top-button-white {
+  border: 1px solid #FE775A;
+  border-radius: 5px;
+  color: #FE775A;
+  background-color: #FAFCFE;
+  padding: 10px;
+}
+#header-top-button-orange {
+  border: 1px solid #FE775A;
+  border-radius: 5px;
+  color: white;
+  background-color: #FE775A;
+  padding: 10px;
+}
 
+/* header bottom */
+#icon-logo {
+line-height: 100px;
+}
+#header-bottom-left {
+  float: left;
+}
+#header-bottom-right {
+  font-family: 'Orbitron', sans-serif;
+  float: right;
+}
+.icon-arrow {
+  margin-left: 10px;
+}
+
+/* header background */
+#header-background {
+  position: relative;
+  font-family: 'Orbitron', sans-serif;
+  color: #32495B;
+  background-image: url("../img/jumbotron.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+#header-background-text-container {
+  height: 100%;
+  width: 50%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  line-height: 40px;
+}
+#header-background::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 80px;
+  width: 100%;
+  border-top: 2px solid #32495B;
+  border-bottom: 2px solid #32495B;
+  background-color: #AFEBE4;
+}
+#header-background-button {
+  display: inline-block;
+  border: 1px solid #FE775A;
+  border-radius: 5px;
+  color: white;
+  background-color: #FE775A;
+  padding: 20px;
+  margin: 50px 0;
+}
+#header-background-text-small {
+  font-size: 10px;
+}
 
 
 
